# triage-wizard

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: deploy-pages.yml
backend-rust/: .env.example  .gitignore  CLAUDE.md  Cargo.toml
backend-rust/src/: claude_cli.rs  main.rs
docs/: ai-chat-interface-plan.md  ai-providers.md  architecture.md  canned-responses-conversion-guide.md  canned-responses-spec.md  claude-integration-research.md  export-formats.md  tags-and-heuristics.md
frontend/: .gitignore  CLAUDE.md  canned-responses.md  index.html  package-lock.json  package.json  styles.css  vitest.config.js
frontend/src/: ai.js  aiLogger.js  analysisFormat.js  app.js  bugzilla.js  cannedResponses.js  chatModels.js  chatProtocol.js  config.js  exports.js  filters.js  prompts.js  storage.js  tags.js  ui.js
frontend/src/__tests__/: ai.test.js  app.test.js  bugzilla.test.js  cannedResponses.test.js  config.test.js  exports.test.js  filters.test.js  modules.test.js  prompts.test.js  storage.test.js  tags.test.js  ui.test.js
