[package]
name = "triage-wizard-backend"
version = "0.1.0"
edition = "2021"
description = "Backend proxy for Bugzilla Bug Triage Helper"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (using rustls for portability - no OpenSSL required)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"
